Add more strings to localization.

--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.ar.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.ar.resx
@@ -161,7 +161,7 @@
   <data name="dlgConfigureDrawing_Title" xml:space="preserve">
     <value>تهيئة الرسم</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>الاسم</value>
   </data>
   <data name="dlgConfigureFading_chkAlwaysVisible" xml:space="preserve">
@@ -233,13 +233,13 @@
   <data name="dlgConfigureTrajectory_ExtraData_CentripetalAcceleration" xml:space="preserve">
     <value>التسارع المركزي</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>التتبع</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>إطار الهدف:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>إطار البحث:</value>
   </data>
   <data name="dlgConfigureMeasure_lblRealSize" xml:space="preserve">
@@ -950,10 +950,10 @@
   <data name="mnuRotation" xml:space="preserve">
     <value>تدوير الشاشة</value>
   </data>
-  <data name="mnuDrawingTrackingStop" xml:space="preserve">
+  <data name="tracking_Stop" xml:space="preserve">
     <value>توقف عن التتبع</value>
   </data>
-  <data name="mnuDrawingTrackingStart" xml:space="preserve">
+  <data name="tracking_Start" xml:space="preserve">
     <value>بدء تتبع</value>
   </data>
   <data name="mnuShowLabel" xml:space="preserve">
