--- a/Kinovea/Languages/RootLang.resx
+++ b/Kinovea/Languages/RootLang.resx
@@ -678,7 +678,37 @@
   <data name="prefPanelPlayer_EnablePixelFiltering" xml:space="preserve">
     <value>Enable pixel filtering</value>
   </data>
-  <data name="lblPreset" xml:space="preserve">
+  <data name="prefPanelDrawings_lblPreset" xml:space="preserve">
     <value>Preset {0}:</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="formWindowProperties_OnStartup" xml:space="preserve">
+    <value>On startup</value>
+  </data>
+  <data name="formWindowProperties_ScreenList" xml:space="preserve">
+    <value>Screen list</value>
+  </data>
+  <data name="formWindowProperties_ImportCurrentScreens" xml:space="preserve">
+    <value>Import current screens</value>
+  </data>
+  <data name="formWindowManager_SavedWindows" xml:space="preserve">
+    <value>Saved windows</value>
+  </data>
+  <data name="prefPanelCapture_ExportedAnnotations" xml:space="preserve">
+    <value>Exported annotations</value>
+  </data>
+  <data name="prefPanelCapture_ExportDrawings" xml:space="preserve">
+    <value>Export drawings</value>
+  </data>
+  <data name="prefPanelCapture_ExportCalibration" xml:space="preserve">
+    <value>Export calibration</value>
+  </data>
+  <data name="prefPanelDrawings_EnableSmoothingOfDerivativesForHighSpeedFootage" xml:space="preserve">
+    <value>Enable smoothing of derivatives for high speed footage</value>
+  </data>
+  <data name="formWindowProperties_StartProcess" xml:space="preserve">
+    <value>Start process</value>
   </data>
 </root>
