--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.bg.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.bg.resx
@@ -194,7 +194,7 @@
   <data name="dlgConfigureDrawing_Title" xml:space="preserve">
     <value>Конфигурация на инструмента за рисуване</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>Име</value>
   </data>
   <data name="dlgConfigureFading_chkAlwaysVisible" xml:space="preserve">
@@ -272,13 +272,13 @@
   <data name="dlgConfigureTrajectory_ExtraData_CentripetalAcceleration" xml:space="preserve">
     <value>Центроустремително ускороение</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>Проследяване</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>Прозорец на обекта:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>Прозорец на търсене:</value>
   </data>
   <data name="dlgConfigureMeasure_lblRealSize" xml:space="preserve">
@@ -635,10 +635,10 @@
   <data name="mnuDeleteEndOfTrajectory" xml:space="preserve">
     <value>Изтрии пътя след тази точка</value>
   </data>
-  <data name="mnuDrawingTrackingStart" xml:space="preserve">
+  <data name="tracking_Start" xml:space="preserve">
     <value>Започнете проследяването</value>
   </data>
-  <data name="mnuDrawingTrackingStop" xml:space="preserve">
+  <data name="tracking_Stop" xml:space="preserve">
     <value>Спрете проследяването</value>
   </data>
   <data name="mnuTwoCaptures" xml:space="preserve">
