--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.fi.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.fi.resx
@@ -521,7 +521,7 @@
   <data name="DataAnalysis_ResultantLinearAcceleration" xml:space="preserve">
     <value>Tuloksena oleva kiihtyvyys</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>Nimi</value>
   </data>
   <data name="dlgConfigureOpacity_lblMax" xml:space="preserve">
@@ -593,7 +593,7 @@
   <data name="mnuCopyImageToClipboard" xml:space="preserve">
     <value>Kopioi kuva leikepöydälle</value>
   </data>
-  <data name="mnuDrawingTrackingStop" xml:space="preserve">
+  <data name="tracking_Stop" xml:space="preserve">
     <value>Pysäytä seuranta</value>
   </data>
   <data name="dlgTimebase_Title" xml:space="preserve">
@@ -764,7 +764,7 @@
   <data name="DrawingName_TestGrid" xml:space="preserve">
     <value>Kameran testiverkko</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>Hakuikkuna:</value>
   </data>
   <data name="ExtraData_Diameter" xml:space="preserve">
@@ -869,7 +869,7 @@
   <data name="Generic_SaveKVA" xml:space="preserve">
     <value>Tallenna merkinnät</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>Seuranta</value>
   </data>
   <data name="mnuVisibilityDefault" xml:space="preserve">
@@ -890,7 +890,7 @@
   <data name="dlgConfigureTrajectory_ExtraData_CentripetalAcceleration" xml:space="preserve">
     <value>Keskeiskiihtyvyys</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>Objekti ikkuna:</value>
   </data>
   <data name="mnuShowCircleCenter" xml:space="preserve">
@@ -950,7 +950,7 @@
   <data name="DrawingName_Posture" xml:space="preserve">
     <value>Ryhti</value>
   </data>
-  <data name="mnuDrawingTrackingStart" xml:space="preserve">
+  <data name="tracking_Start" xml:space="preserve">
     <value>Aloita seuranta</value>
   </data>
   <data name="mnuPasteDrawing" xml:space="preserve">
