--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.id.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.id.resx
@@ -130,7 +130,7 @@
   <data name="dlgConfigureFading_chkAlwaysVisible" xml:space="preserve">
     <value>Selalu terlihat</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>Nama</value>
   </data>
   <data name="DataAnalysis_TimeModel_Absolute" xml:space="preserve">
@@ -256,13 +256,13 @@
   <data name="dlgConfigureMeasure_lblRealSize" xml:space="preserve">
     <value>Ukuran segmen sesungguhnya:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>Jendela pencarian:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>Jendela objek:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>Pelacakan</value>
   </data>
   <data name="ExtraData_Circumference" xml:space="preserve">
@@ -829,10 +829,10 @@
   <data name="mnuDeleteEndOfTrajectory" xml:space="preserve">
     <value>Hapus jalur setelah titik ini</value>
   </data>
-  <data name="mnuDrawingTrackingStart" xml:space="preserve">
+  <data name="tracking_Start" xml:space="preserve">
     <value>Mulai pelacakan</value>
   </data>
-  <data name="mnuDrawingTrackingStop" xml:space="preserve">
+  <data name="tracking_Stop" xml:space="preserve">
     <value>Hentikan pelacakan</value>
   </data>
   <data name="mnuTwoCaptures" xml:space="preserve">
