--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.pl.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.pl.resx
@@ -368,13 +368,13 @@
   <data name="dlgConfigureMeasure_lblRealSize" xml:space="preserve">
     <value>Rzeczywista wielkość segmentu:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>Znajdź okno:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>Cel okna:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>Śledzenie</value>
   </data>
   <data name="ExtraData_Circumference" xml:space="preserve">
@@ -467,7 +467,7 @@
   <data name="dlgConfigureFading_chkAlwaysVisible" xml:space="preserve">
     <value>Zawsze widoczny</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>Nazwa</value>
   </data>
   <data name="dlgConfigureDrawing_Title" xml:space="preserve">
@@ -797,10 +797,10 @@
   <data name="mnuTwoMixed" xml:space="preserve">
     <value>Jeden ekran przechwytywania i jeden ekran odtwarzania</value>
   </data>
-  <data name="mnuDrawingTrackingStop" xml:space="preserve">
+  <data name="tracking_Stop" xml:space="preserve">
     <value>Zatrzymaj śledzenie</value>
   </data>
-  <data name="mnuDrawingTrackingStart" xml:space="preserve">
+  <data name="tracking_Start" xml:space="preserve">
     <value>Rozpocznij śledzenie</value>
   </data>
   <data name="mnuDeleteEndOfTrajectory" xml:space="preserve">
