--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.th.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.th.resx
@@ -106,13 +106,13 @@
   <data name="dlgConfigureMeasure_lblRealSize" xml:space="preserve">
     <value>ระยะจริงของเซกเมนต์:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>หน้าต่างแสดงการค้นหา:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>หน้าต่างแสดงวัตถุ:</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>ติดตาม</value>
   </data>
   <data name="ExtraData_Circumference" xml:space="preserve">
@@ -214,7 +214,7 @@
   <data name="dlgConfigureFading_chkAlwaysVisible" xml:space="preserve">
     <value>แสดงให้เห็นตลอดเวลา</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>ชื่อ</value>
   </data>
   <data name="dlgConfigureDrawing_Title" xml:space="preserve">
