--- a/Kinovea.ScreenManager/Languages/ScreenManagerLang.zh-CHS.resx
+++ b/Kinovea.ScreenManager/Languages/ScreenManagerLang.zh-CHS.resx
@@ -497,7 +497,7 @@
   <data name="dlgTimebase_GroupCapture" xml:space="preserve">
     <value>高速摄像头</value>
   </data>
-  <data name="dlgConfigureDrawing_Name" xml:space="preserve">
+  <data name="drawingName" xml:space="preserve">
     <value>名字</value>
   </data>
   <data name="DataAnalysis_ResultantLinearAcceleration" xml:space="preserve">
@@ -770,10 +770,10 @@
   <data name="mnuRotation" xml:space="preserve">
     <value>旋转</value>
   </data>
-  <data name="mnuDrawingTrackingStop" xml:space="preserve">
+  <data name="tracking_Stop" xml:space="preserve">
     <value>停止追踪</value>
   </data>
-  <data name="mnuDrawingTrackingStart" xml:space="preserve">
+  <data name="tracking_Start" xml:space="preserve">
     <value>开始追踪</value>
   </data>
   <data name="mnuCopyImageToClipboard" xml:space="preserve">
@@ -1016,13 +1016,13 @@
   <data name="dlgCalibrateLine_CoordinateSystemAlignment" xml:space="preserve">
     <value>坐标系对齐：</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_SearchWindow" xml:space="preserve">
+  <data name="tracking_SearchWindow" xml:space="preserve">
     <value>搜索窗口：</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking_ObjectWindow" xml:space="preserve">
+  <data name="tracking_ObjectWindow" xml:space="preserve">
     <value>对象窗口：</value>
   </data>
-  <data name="dlgConfigureTrajectory_Tracking" xml:space="preserve">
+  <data name="tracking_Tracking" xml:space="preserve">
     <value>追踪</value>
   </data>
   <data name="ExtraData_Center" xml:space="preserve">
